--- a/templates/rot_form.html
+++ b/templates/rot_form.html
@@ -22,9 +22,7 @@
         <label>{{ declarative }} 
         <input type="number" name="rot" />
         </label>
-        <textarea name="text">
-            {{ message }}
-            </textarea>
+        <textarea name="text">{{ message }}</textarea>
         <input type="Submit" />
     </body>
 </html>
